...
            value = email,
            onValueChange = onEmailChange,
            label = { Text(text = stringResource(id = R.string.email)) },
            isError = emailError != null,
            modifier = Modifier
                .fillMaxWidth()
                .testTag("EmailField")
                .semantics { contentDescription = "Champ email" },
            colors = TextFieldDefaults.outlinedTextFieldColors(
                focusedTextColor = MaterialTheme.colorScheme.onBackground,
                unfocusedTextColor = MaterialTheme.colorScheme.onBackground.copy(alpha = 0.7f),
                disabledTextColor = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.5f),
                errorTextColor = MaterialTheme.colorScheme.error,
...
        Button(
            onClick = onValidateEmail,
            modifier = Modifier
                .padding(16.dp, bottom = 16.dp)
                .width(150.dp)
                .height(50.dp)
                .testTag("EmailNextButton")
                .semantics { contentDescription = "Bouton suivant" },
            shape = RectangleShape,
        ) {
            Text(
                text = stringResource(id = R.string.next),
                color = MaterialTheme.colorScheme.onPrimary
...
