...
        value = password,
        onValueChange = onPasswordChange,
        label = { Text(text = stringResource(id = R.string.password)) },
        isError = passwordError != null,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("PasswordField")
            .semantics { contentDescription = "Champ mot de passe" },
        visualTransformation = if (passwordVisible) VisualTransformation.None else PasswordVisualTransformation(),
        trailingIcon = {
            IconButton(
                onClick = onVisibilityToggle,
                modifier = Modifier.semantics {
...
            }
        },
        modifier = Modifier
            .padding(16.dp, bottom = 16.dp)
            .width(150.dp)
            .height(50.dp)
            .testTag("PasswordLoginButton")
            .semantics { contentDescription = "Bouton connexion" },
        shape = RectangleShape
    ) {
        Text(text = stringResource(id = R.string.save), color = MaterialTheme.colorScheme.onPrimary)
    }
}
...
